# Lidar_Motion_Corrector_RHDL

./: Cargo.toml  README.md  visualize_results.py
fpga_core/: Cargo.toml
fpga_core/src/: alu.rs  control_unit.rs  engine.rs  lib.rs  main.rs  types.rs
host_software/: Cargo.toml
host_software/src/: data_loader.rs  lut_gen.rs  main.rs
